# tailbus

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  fly.toml  go.mod  go.sum  install.sh  roadmap.md
.github/workflows/: release.yml
api/agentpb/: agent.pb.go  agent_grpc.pb.go
api/coordpb/: coord.pb.go  coord_grpc.pb.go
api/messagepb/: messages.pb.go
api/transportpb/: transport.pb.go  transport_grpc.pb.go
cmd/tailbus/: agent.go  dashboard.go  dashboard_test.go  main.go  team.go
cmd/tailbus-coord/: main.go
cmd/tailbus-relay/: main.go
cmd/tailbusd/: main.go
deploy/: coord.toml
examples/app-builder/: README.md  claude_coder.py  codex_coder.py  lmstudio_coder.py  orchestrator.py  run.sh
examples/demo/: README.md  coord.toml  demo.sh  machine-a.toml  machine-b.toml  machine-c.toml  register-agents.sh
examples/dev/: coord.toml  daemon1.toml  daemon2.toml
examples/dev-task-room/: README.md  critic.py  dev_task_common.py  dev_task_common_test.py  implementer.py  orchestrator.py  run.sh  workspace_agent.py
examples/docker/: llm_agent.py
examples/incident-room/: README.md  billing_agent.py  codex_status_agent.py  incident_common.py  lmstudio_analyst.py  run-llm.sh  (+7 more)
init/: co.tailbus.daemon.plist  tailbusd.service
internal/: integration_test.go  relay_integration_test.go
sdk/python/: pyproject.toml
sdk/python/src/tailbus/: __init__.py  _agent.py  _errors.py  _process.py  _protocol.py  _sync.py
sdk/python/tests/: test_agent.py  test_protocol.py  test_sync.py
(+82 files in other folders)
