[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tailbus"
version = "0.1.0"
description = "Python SDK for tailbus — agent communication mesh"
requires-python = ">=3.10"
license = "MIT"
keywords = ["agents", "messaging", "tailbus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/tailbus"]
